test/error_quality_fixtures/parse/trailing_operator.mdk
main =
  let x = 1 +
  in println (debug x)
